--- a/Consulta/Frontend/index.html
+++ b/Consulta/Frontend/index.html
@@ -21,11 +21,10 @@
           <span id="codspan">
             <input type="number" id="cod" name="cod" required />
           </span>
-          
           <button type="submit">Buscar</button>
+          <button type="button" onclick="Voltar()">Voltar ao inicio</button>
         </form>
       </span>
-      <button id="Voltar" onclick="Voltar()">Voltar ao inicio</button>
     </div>
   </body>
 </html>
