--- a/Home/index.html
+++ b/Home/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>suag</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <span>
-        <div>.</div>
-    </span> 
+      <div>.</div>
+    </span>
     <h1>SUAG</h1>
-    <br> <br> <br>
-    <a href="consulta.html" class="consulta">consulta</a>
-    <a href="cadastro.html" class="cadastro">cadastro</a>   
-</body>
+    <br />
+    <br />
+    <br />
+    <a href="../Consulta/Frontend/index.html" class="consulta">consulta</a>
+    <a href="../Insercao/index.php" class="cadastro">cadastro</a>
+  </body>
 </html>
